# django-unfold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  runrests.sh  runtests.sh  setup.py  styles.css  tailwind.config.js  tox.ini
.devcontainer/: Dockerfile  backend.env  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/templates/: .release_notes.md.j2  CHANGELOG.md.j2
.github/workflows/: django.yml  lint.yml  release.yml  test.yml
docs/actions/: action-form-example.md  changeform-submitline.md  changeform.md  changelist-row.md  changelist.md  dialog-actions.md  dropdown-actions.md  index.md  introduction.md
docs/components/: button.md  card.md  chart.md  cohort.md  component_class.md  index.md  introduction.md  layer.md  link.md  progress.md  table.md  tracker.md
docs/configuration/: command.md  conditional-fields.md  crispy-forms.md  custom-pages.md  custom-sites.md  dashboard.md  datasets.md  index.md  modeladmin.md  multi-language.md  paginator.md  sections.md  settings.md  site-dropdown.md  sortable-changelist.md
docs/dashboard/: index.md
docs/decorators/: action.md  display.md  index.md
docs/development/: devcontainer.md  index.md  poetry-dependency.md  translation.md
docs/fields/: autocomplete.md  index.md  json.md
docs/filters/: autocomplete.md  checkbox-radio.md  datetime.md  dropdown.md  horizontal.md  index.md  introduction.md  numeric.md  text.md
docs/inlines/: index.md  introduction.md  nested.md  nonrelated.md  options.md  paginated.md  sortable.md
docs/installation/: auth.md  index.md  quickstart.md
docs/integrations/: django-celery-beat.md  django-constance.md  django-guardian.md  django-hijack.md  django-import-export.md  django-json-widget.md  django-location-field.md  django-modeltranslation.md  django-money.md  django-reversion.md  django-simple-history.md  djangoql.md  index.md  nested-admin.md
docs/multi-language/: index.md
docs/pages/: index.md
docs/sections/: index.md
docs/sites/: index.md
docs/styles-scripts/: customizing-tailwind.md  index.md  loading-files.md
docs/tabs/: changeform.md  changelist.md  dynamic.md  fieldsets.md  index.md  inline.md
docs/tools/: index.md
docs/widgets/: array.md  index.md  markdown.md  wysiwyg.md
scripts/: prune_locale.py
src/: compat.py
src/unfold/: admin.py  apps.py  checks.py  compat.py  components.py  dataclasses.py  datasets.py  decorators.py  dto.py  enums.py  exceptions.py  fields.py  forms.py  layout.py  overrides.py  paginator.py  runtests.py  sections.py  settings.py  settings_development.py  sites.py  styles.css  translit.py  typing.py  utils.py  views.py  widgets.py
src/unfold/contrib/admin_honeypot/: admin.py  apps.py  forms.py  urls.py  views.py
src/unfold/contrib/constance/: apps.py  settings.py
src/unfold/contrib/convert/: apps.py  convert_model_admin.py
src/unfold/contrib/fields/: apps.py  widgets.py
src/unfold/contrib/filters/: admin.py  apps.py  forms.py
src/unfold/contrib/forms/: __init__.py  apps.py  widgets.py
src/unfold/contrib/guardian/: apps.py
src/unfold/contrib/hijack/: apps.py
src/unfold/contrib/import_export/: admin.py  apps.py  forms.py
src/unfold/contrib/inlines/: admin.py  apps.py  checks.py  forms.py
src/unfold/contrib/location_field/: apps.py
src/unfold/contrib/nested_admin/: __init__.py  admin.py  apps.py
src/unfold/contrib/numeric_filters/: admin.py  apps.py  forms.py
src/unfold/contrib/reversion/: admin.py  apps.py
src/unfold/contrib/reversion_compare/: admin.py  apps.py
src/unfold/contrib/simple_history/: apps.py
src/unfold/custom/: dataclasses.py  typing.py
src/unfold/mixins/: __init__.py  action_model_admin.py  base_model_admin.py  dataset_model_admin.py  formfield_model_admin.py  nested_inlines_model_admin.py
src/unfold/models/: __init__.py  fields.py
src/unfold/templates/admin/: actions.html  app_index.html  app_list.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_object_tools.html  change_list_results.html  dataset_actions.html  date_hierarchy.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  nav_sidebar.html  object_history.html  pagination.html  search_form.html  submit_line.html
src/unfold/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html
src/unfold/templates/unfold/: change_list_filter.html
src/unfold/templates/unfold_crispy/: display_form.html  errors.html  errors_formset.html  field.html  inputs.html  uni_form.html  whole_uni_form.html  whole_uni_formset.html
src/unfold/templatetags/: unfold.py  unfold_list.py
src/unfold/tests/: tests_base.py  tests_settings.py
tests/: conftest.py  factories.py  fixtures.py  settings.py  test_actions.py  test_actions_dialog.py  test_checks.py  test_colors.py  test_command.py  test_conditional_fields.py  test_crispy_forms.py  test_datasets.py  test_environment.py  test_fields.py  test_filters.py  test_forms.py  test_import_export.py  test_inlines.py  test_navigations.py  test_nested_admin.py  test_nonrelated_inlines.py  test_pages.py  test_paginator.py  test_reversion.py  test_sections.py  test_settings.py  test_show.py  test_sidebar.py  test_sidebar_navigation.py  test_site_branding.py  test_tabs.py  test_tags.py  test_template_tags.py  test_theme.py  test_tools.py  test_ui_warnings.py  test_utils.py  test_views.py  test_widgets.py  urls_secret_admin.py
tests/server/: manage.py
tests/server/example/: admin.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
tests/server/example/migrations/: 0001_initial.py  0002_user_content_type.py  0003_tag_user_tags.py  0003_user_age.py  0004_actionuser_sectionuser.py  0005_article.py  0005_conditionalfieldstestmodel.py  0005_filteruser_user_numeric_range_and_more.py  0008_post.py  (+6 more)
(+317 files in other folders)
