[project]
name = "django-unfold"
version = "0.77.1"
description = "Modern Django admin theme"
authors = []
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "admin",
    "tailwind",
    "theme",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
]
dependencies = ["django>=4.2"]

[project.urls]
Homepage = "https://unfoldadmin.com"
Documentation = "https://unfoldadmin.com/docs/"
Repository = "https://github.com/unfoldadmin/django-unfold"
Issues = "https://github.com/unfoldadmin/django-unfold/issues"
Changelog = "https://github.com/unfoldadmin/django-unfold/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "django-constance>=4.3.4",
    "django-guardian>=3.2.0",
    "django-import-export>=4.3.14",
    "django-location-field>=2.7.3",
    "django-money>=3.5",
    "django-simple-history>=3.11.0",
    "django-stubs>=5.2",
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11",
    "pytest-factoryboy>=2.8",
    "python-semantic-release>=10.5",
    "tox>=4.32",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.sdist]
include = ["src/unfold"]

[tool.hatch.build.targets.wheel]
include = ["src/unfold"]

[tool.hatch.build.targets.wheel.sources]
"src/unfold" = "unfold"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    "T20",  # disallow pprint and print
]
ignore = [
    "E501",    # line too long, handled by black
    "B905",    # zip() without strict=True
    "C901",    # too complex
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0913", # Too many arguments in function definition
]

[tool.semantic_release]
tag_format = "{version}"
major_on_zero = false
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
mode = "init"
exclude_commit_patterns = [
    "chore: version bump",
    '''chore(?:\(deps\))?: .+''',
    '''chore(?:\(deps-dev\))?: .+'''
]

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --cov=unfold
    --cov-fail-under=87
    --cov-report=term-missing
    --reuse-db
    --no-migrations
    --ds=example.settings
    """
pythonpath = "tests/server"
django_find_project = false

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.paths]
source = [
  "src/unfold",
  "*/site-packages/unfold",
]

[tool.ty.src]
include = ["src/unfold"] # TODO: include tests

[tool.ty.rules]
possibly-missing-attribute = "ignore" # TODO: remove once all errors are fixed
too-many-positional-arguments = "ignore"

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = true
    envlist =
        python{310,311,312,313,314}-django{42,50,51,52,60}

    [testenv]
    allowlist_externals = uv
    skip_install = true
    set_env =
        PYTHONDEVMODE = 1
    commands = uv run -- pytest tests/
"""
